fix: add spacing according to design file

--- a/day2025-date-picker/less/styles.less
+++ b/day2025-date-picker/less/styles.less
@@ -80,9 +80,11 @@ main {
 
 .month {
   text-align: center;
+  padding-top: 12vw;
 
   h3 {
     position: relative;
+    margin-bottom: 6vw;
   }
 
   h3::after {
